# l-screening

./: .gitignore  README.md  Sample EL_1.numbers  Sample EL_1.xlsx  Sample_EL_1_screened.xlsx  Taskfile.yml  index.html  manifest.webmanifest  progress.txt  pyproject.toml  screening.py  service-worker.js
.claude/: settings.local.json
.github/workflows/: deploy.yml
_app/: env.js  version.json
app/: README.md  node-shims.d.ts  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
app/scripts/: sync-releases.js
app/src/: app.html  service-worker.ts
backend/: requirements.txt
backend/app/: logic.py  main.py
data/: Sample EL_281 comp (Raw).xlsx  Sample Revef_1 (Raw2)_screened.txt
frontend/: README.md  package-lock.json  package.json  svelte.config.js  test_spec.js  vite.config.ts
releases/: README.md  v0.8.0.md  v7.1.html  v7.1.md
req/: agilent_masshunter_fields_table.csv  agilent_masshunter_fields_table.html  agilent_masshunter_fields_table.xlsx
scripts/: build_local.ps1  build_local.sh  deploy-pwa.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/pyembed/python/lib/: libtcl9.0.dylib  libtcl9tk9.0.dylib
src-tauri/pyembed/python/lib/itcl4.3.5/: itclConfig.sh
src-tauri/pyembed/python/lib/python3.14/: _sysconfig_vars__darwin_darwin.json  _sysconfigdata__darwin_darwin.py
src-tauri/pyembed/python/lib/python3.14/config-3.14-darwin/: Makefile
src-tauri/src/: lib.rs  main.rs
tests/: compare_results.py  run_python.py  run_wasm.mjs  test_logic.py
(+91 files in other folders)
