[package]
name = "lc-ms-screening"
version = "0.1.0"
description = "LC-MS Screening Desktop Application"
authors = ["vkey"]
edition = "2021"

[lib]
name = "lc_ms_screening_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pytauri = { version = "0.8.0" }
tauri-plugin-pytauri = { version = "0.8.0" }
pyo3 = { version = "0.25" }

[[bin]]
name = "lc-ms-screening"
path = "src/main.rs"
required-features = ["pytauri-standalone"]

[features]
default = []
pytauri-standalone = ["pytauri/standalone"]
extension-module = ["pyo3/extension-module"]
custom-protocol = ["tauri/custom-protocol"]
